Functionality: When toggled off to Disabled, page does not need to be reloaded now. However when you enable the extension you still need to reload the page for changes to take effect. Will fix in future update. Other: -Added instructions to reload page. Added link to source code. -New icons.

--- a/popup/styles.css
+++ b/popup/styles.css
@@ -45,3 +45,18 @@ button#toggleFilter.filterActive:hover {
 button#toggleFilter:active {
   transform: scale(0.98);
 }
+
+.smallText {
+  font-size: 14px;
+  text-align: center;
+  margin: 5px 0;
+}
+
+.smallText a {
+  color: #167ac6;
+  text-decoration: none;
+}
+
+.smallText a:hover {
+  text-decoration: underline;
+}
